# basic-calculator

./: README.md  calc.py  check_format.sh  gui.py  pyproject.toml  tests.py
BasicCalculator/: LICENSE  __init__.py  calc.py  gui.py
BasicCalculator/calculator/: calc.py
BasicCalculator/ui/: gui.py
tests/: calc_test.py
