[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyBasicCalculator"
version = "0.0.1"
authors = [
{ name="Meer Suri", email="meersuri@gmail.com" },
]
description = "A very basic calculator with both CLI and GUI using Qt"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "PySide2",
]

[project.urls]
"Homepage" = "https://github.com/meersuri/basic-calculator"
"Bug Tracker" = "https://github.com/meersuri/basic-calculator/issues"

[project.scripts]
pybc = "BasicCalculator.calculator.calc:main"
pybc-gui = "BasicCalculator.ui.gui:main"
